K8S/deploy.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: gogs
spec:
  # replicas: 1
  # selector:
  template:
    metadata:
      labels:
        name: gogs
    spec:
      containers:
      - image: gogs/gogs
        name: gogs
