K8S/deploy2.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: demo2
spec:
  replicas: 10
  template:
    metadata:
      labels:
        name: demo2
    spec:
      containers:
        - image: lowet84/k8s-workshop
          name: demo2
          volumeMounts:
            - mountPath: /host
              name: hostname
      volumes:
        - name: hostname
          hostPath:
            path: /etc/hostname
